# easy-cass-mcp

./: .dockerignore  .env.test  .gitignore  CLAUDE.md  DOCKER_PUBLISHING.md  Dockerfile  Makefile  README.md  __init__.py  cassandra_connection.py  cassandra_service.py  cassandra_table.py  cassandra_utility.py  compaction_analyzer.py  config.py  configuration_analyzer.py  constants.py  docker-compose.yml  main.py  mcp_server.py  proxy.py  pyproject.toml
.claude/agents/: python-doc-generator.md  python-test-engineer.md
ecm/: __init__.py  cassandra_connection.py  cassandra_service.py  cassandra_settings.py  cassandra_table.py  cassandra_utility.py  cassandra_version.py  compaction_analyzer.py  config.py  configuration_analyzer.py  constants.py  exceptions.py  mcp_server.py  proxy.py  recommendation.py  thread_pool_analyzer.py  thread_pool_stats.py
tests/: conftest.py  utils.py
tests/integration/: test_cassandra_service.py  test_system_table_query.py
tests/unit/: test_cassandra_connection.py  test_cassandra_service.py  test_cassandra_settings.py  test_cassandra_table.py  test_cassandra_utility.py  test_cassandra_version.py  test_compaction_analyzer.py  test_configuration_analyzer.py  test_mcp_server.py  test_thread_pool_analyzer.py  test_thread_pool_stats.py
